# fox3

./: .gitignore  Dockerfile  MEMORY.md  Makefile  README.MD  feedback_autonomous_testing.md  go.mod  go.sum  main.go  operations.md
.claude/: CLAUDE.md  settings.local.json
.claude/memory/: feedback_no_external_processes.md  sleep_encryption.md
.claude/plans/: refactored-purring-bachman.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: go_dev.yml  go_main.yml  release.yml
docs/: CHANGELOG.MD  CONTRIBUTING.MD  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  api.md  architecture.md  building.md  commands.md  configuration.md  frontend.md  listeners.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: terminal_test.html
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: AgentContextMenu.tsx  AgentTable.tsx  FileBrowser.tsx  HvncViewer.tsx  MissileIcon.tsx  ProcessBrowser.tsx  TunnelManager.tsx
frontend/src/context/: NotifyContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: AgentDetails.tsx  Agents.tsx  Credentials.tsx  Listeners.tsx  Login.tsx  Screenshots.tsx  Topology.tsx
missile/: Cargo.toml
missile/src/: agent.rs  lib.rs  main.rs  rdll.rs  socks.rs
missile/src/commands/: credentials.rs  help.rs  kerberos.rs  ntfs_copy.rs  process.rs  registry.rs  services.rs  users.rs
missile/src/transport/: http.rs  smb.rs  tcp.rs
pkg/: README.MD  fox3.go
pkg/agents/: agents.go  repository.go  structs.go
pkg/agents/db/: repository.go
pkg/authenticators/: authenticators.go
pkg/client/: client.go
pkg/core/: core.go
pkg/credentials/: credentials.go
pkg/db/: db.go  models.go
pkg/delegate/: repository.go
pkg/events/: events.go
pkg/fox3-message/: messages.go
pkg/group/: repository.go
pkg/jobs/: jobs.go  repository.go
pkg/listeners/: listeners.go
pkg/logging/: logging.go
pkg/modules/: modules.go
pkg/opaque/: opaque.go
pkg/pivot/: pivot.go
pkg/push/: push.go
pkg/rpc/: rpc.pb.go  rpc.proto  rpc_grpc.pb.go
pkg/screenshots/: screenshots.go
pkg/servers/: servers.go
pkg/transformer/: transformer.go
simple_agent/: ARCHITECTURE.md  Cargo.toml
simple_agent/src/: agent.rs  bof.rs  ekko.rs  exec.rs  hvnc.rs  main.rs  pipeline.rs  protocol.rs  rportfwd.rs  screenshot.rs  shellcode.rs  transport.rs
simple_agent/src/commands/: ad.rs  crypto.rs  domain.rs  files.rs  mod.rs  network.rs  privesc.rs  schtasks.rs  security.rs  system.rs  winapi_helpers.rs
simple_agent/src/transport/: dns.rs
(+94 files in other folders)
